fix overflow

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,3 @@
 .home {
-  &__container {
-    width: 992px;
-    margin: auto;
-  }
+  overflow: hidden;
 }
